create endpoint to add a circle to the frame
